@@ -1,16 +1,21 @@
 import java.util.ArrayList;
 
-public class WaitListService() {
-    private final ArrayList<Party> waitList;
+public class WaitListService {
+    private ArrayList<Party> waitList;
+
     public WaitListService() {
         waitList = new ArrayList<>;
+    }
+
+    public void addParty(Party party) {
+        waitList.add(party);
     }
 
     public Party callNextParty() {
         if (waitList.isEmpty()) {
             return null;
         }
-        Party nextPant = waitList.remove(0);
+        Party nextParty = waitList.removeFirst();
         return nextParty;
     }
 
@@ -18,5 +23,14 @@ public class WaitListService() {
         if (index < 0 || index >= waitList.size()) {
             return null;
         }
+
+        Party removedParty = waitList.remove(index);
+        return removedParty;
     }
+
+    public ArrayList<Party> getList() {
+        return new ArrayList<>(waitList);
+
+    }
+
 }
